# rust-projects

./: .gitignore  README.md
gameboy-emulator/: Cargo.toml
message-queue/admin/: Cargo.toml
message-queue/admin/src/: fonts.rs  main.rs  make_request.rs  server_connector.rs  util.rs
message-queue/server/: Cargo.toml
message-queue/server/src/: admin_worker.rs  buffer_channel.rs  buffer_interface.rs  buffer_manager.rs  buffer_manager2.rs  buffer_processor.rs  buffer_type_manager.rs  connection_manager.rs  connection_worker.rs  dispatcher.rs  logger.rs  main.rs  message_buffer.rs  message_queue.rs  message_topic.rs  queue.rs  queue_manager.rs  queue_store.rs  request_handler.rs  request_worker.rs  router.rs  server.rs  server_error.rs  setup_worker.rs  stream_worker.rs  subscription_manager.rs  topic.rs  topic_filter_tree.rs  topic_manager.rs  topic_processor.rs
personal-finance-manager/api/: .env  Cargo.toml  Dockerfile
personal-finance-manager/api/migrations/: 20250509154457_transactions.sql  20250509182636_parties.sql  20250515182118_party_categories.sql  20250522140548_accounts.sql
personal-finance-manager/api/src/: accounts.rs  aggregates.rs  categories.rs  main.rs  month_breakdown.rs  transaction.rs
pokemon-api/: .env  Cargo.toml  README.md  load_data.py
pokemon-api/migrations/: 20250212094608_pokemon_table.sql  20250212105759_pokemon_in_battle.sql  20250212160436_pokemon_modifiers.sql  20250213150034_singles_battle.sql
pokemon-api/src/: ability.rs  damage_calc.rs  damage_class.rs  main.rs  modifiers.rs  move_effect.rs  move_stat_changes.rs  move_target.rs  nature.rs  owned_pokemon.rs  pkm_move.rs  pkm_stats.rs  pkm_type.rs  pokemon_in_battle.rs  primitive_types.rs  realised_pokemon.rs  side.rs  simple_turn_choice.rs  singles_battle.rs  species.rs  stats.rs  turn_choice.rs  turn_outcome.rs
raytracer/: Cargo.toml  readme.md  scene.json
raytracer/src/: colour.rs  cube.rs  hit.rs  light.rs  main.rs  material.rs  object.rs  ray.rs  scene.rs  scene_loader.rs  sphere.rs  square.rs  tracer.rs  vector.rs
raytracer/src/composition/: camera.rs  colour.rs  material.rs  mod.rs  scene.rs  scene_loader.rs
(+151 files in other folders)
