[package]
name = "server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
backend = { path = "../backend" }
serde = { version = "1.0.214", default-features = false }
erased-serde = "0.4.5"
postcard = { version = "1.1.1", features = ["alloc"] }
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
once_cell = "1.20.2"