[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros", "sqlx-macros", "migrate", "chrono"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"

[package.metadata.sqlx]
offline = true
